# snaic-ai-cv-smartgro

./: .env.example  .gitignore  CLAUDE.md  README.md  al_scheduler_check.py  boostrap_project.py  import_annotations.py  main.py  main_api_server.py  main_day1_catalog.py  main_day2_train.py  main_day3_fine_tune.py  main_day3_recognize.py  main_day4_optimize.py  main_day5_deploy.py  push_captures_to_label_studio.py  pyproject.toml  requirements.txt  retrain_from_label_studio.py  seed_al_baseline.py
.claude/: settings.json
dataset/: data.yaml
dataset/raw_photos/: README.md  classes.txt  notes.json
docs/: day1_project_briefing.html  demo-script-week4.md  handoff-2026-07-07.md  handoff-2026-07-08.md  handoff-2026-07-09.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
launchd/: README.md  com.smartcart.al-scheduler.plist  com.smartcart.api.plist
scripts/: main_day1_catalog.py  main_day2_train.py  main_day3_evaluate.py  main_day4_optimize.py  main_day5_deploy.py
src/: __init__.py
src/data/: __init__.py  annotation_import.py  auto_labeler.py  catalog.py  gallery.py  label_studio_export_pull.py  recognition_dataset.py  synthesizer.py
src/deploy/: __init__.py  active_learning_capture.py  api_server.py  detector.py  label_studio_backend.py  label_studio_push.py  register.py  web_dashboard.py
src/models/: __init__.py  auditor.py  closed_loop.py  dino_extractor.py  optimizer.py  recognition_auditor.py  recognizer.py  variant_auditor.py  (+3 more)
tests/: conftest.py
(+94 files in other folders)
