[project]
name = "snaic-ai-cv-smartgro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.7.0",
    "pandas>=2.0.0",
    "pillow>=9.5.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "typing>=3.10.0.0",
    "ultralytics>=8.1.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: exercises real ultralytics inference against yolo11n.pt (not mocked, run explicitly)",
]
addopts = "-m 'not slow'"
